# GatoEngine

./: .gitignore  .gitmodules  pyproject.toml
gatoengine/: __main__.py
gatoengine/api/: multiserver.py
gatoengine/client/: client.py
gatoengine/client/handlers/: login.py  misc.py
gatoengine/crypto/: mhycrypt.py
gatoengine/network/: handshake.py  kcp_socket.py  packet.py
gatoengine/protocol/: cmdid.py  proto.py
gatoengine/resources/: client_info.json  private_info.json.template
gatoengine/resources/keys/: 2_sign.pem  4_sign.pem  5_sign.pem
gatoengine/utilities/: reader.py
python-kcp/lkcp/: core.c  core.pyx  ikcp.c  ikcp.h  kcp.py
